--- a/website/package.json
+++ b/website/package.json
@@ -6,10 +6,12 @@
   "author": "Zachary Hallemeyer",
   "private": true,
   "license": "BSD",
+  "type": "commonjs",
   "dependencies": {
     "express": "~4.17.1",
     "socket.io": "^4.0.0",
-    "Node.js": "v16.13.2"
+    "Node.js": "v16.13.2",
+	"fs": "8.19.2"
   },
   "scripts": {
     "start": "node index.js"
